# Dementia-Detection

./: .gitignore  About.py  README.md  pyproject.toml
.streamlit/: config.toml  secrets.toml
model/: notebook.ipynb
pages/: 2_Demo.py  3_Contact.py  4_Articles.py
